@@ -1,4 +1,5 @@
 ncmpc 0.27 - not yet released
+* remove the status bar clock (option "display-time")
 
 ncmpc 0.26 - (2017-03-20)
 * require libmpdclient 2.9
